--- a/css/farm.css
+++ b/css/farm.css
@@ -1,18 +1,12 @@
-/*↓重置歸零css*/
-
 * {
     padding: 0;
     margin: 0;
     vertical-align: baseline;
-    /*垂直對齊方式,baseline:默認,元素放置在父元素的基線上。*/
     -webkit-box-sizing: border-box;
-    /*元素指定的任何內邊距和邊框都將在已設定的寬度和高度內進行繪製*/
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     list-style-type: none;
-    /*使list前面沒有原點,因為ul>li預設有前置點*/
     text-decoration: none;
-    /*使文字沒有裝飾,因為a預設有下劃線*/
 }
 
 html,
@@ -35,11 +29,6 @@ h3 {
     line-height: 1;
 }
 
-
-
-
-/*使如果視窗過小,文字下摺時不會間距太遠*/
-
 h1 *,
 h2 *,
 h3 * {
@@ -54,10 +43,7 @@ a {
 .cf:before,
 .cf:after {
     content: " ";
-    /* 1 */
     display: table;
-    /* 2 */
-    /*table表格元素永遠不會下摺,這是為防止螢幕變小時,表格可能沒有高度,所以先設空元素給他*/
 }
 
 .cf:after {
@@ -93,9 +79,7 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
-    /*使圖片符合外框架大小,超過的不顯示*/
     background-size: cover;
-    /*如果值為contain,會在框架裡顯示原始圖片比例,不足的留白*/
 }
 
 .top-center {
@@ -139,6 +123,7 @@ a {
     font-weight: bold;
     padding-top: 20px;
     text-indent: 5px;
+    font-size: 1.5em;
 }
 
 .input-text {
@@ -149,6 +134,7 @@ a {
     margin-top: 10px;
     padding: 10px;
     width: 100%;
+    font-size: 1.5em;
 }
 
 .input-text-all {
@@ -157,6 +143,7 @@ a {
     margin-top: 10px;
     padding: 10px;
     width: 100%;
+    font-size: 1.5em;
 }
 
 .input-btn {
@@ -168,6 +155,7 @@ a {
     border-bottom-right-radius: 10px;
     color: #ffffff;
     width: 100%;
+    font-size: 1.5em;
 }
 
 .four-btn {
@@ -178,6 +166,7 @@ a {
     border-radius: 10px;
     color: #ffffff;
     width: 100%;
+    font-size: 1.5em;
 }
 
 .col-xs-8 {
